sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:4: error: value count is not a member of Unit
                    {test=true; for (i<-1 to (x-2-count)) {if (isSmaller(i, (i-1))) {swap(i, (i-1)); test=false}; if (isSmaller((x-i+count), (x-i-1+count))) {swap((x-i+count), (x-i-1+count)); test=false} count=count+1}}
                                                                                                                                                                                                            ^